[gd_scene load_steps=13 format=3 uid="uid://by7wal4lga0a2"]

[ext_resource type="Script" path="res://Actors/Enemy/Enemy.gd" id="1_uod5a"]
[ext_resource type="Script" path="res://scripts/HealthComponent.gd" id="2_b6kpp"]

[sub_resource type="Gradient" id="Gradient_qe4c1"]
colors = PackedColorArray(0, 0, 0, 1, 0.560955, 0.560955, 0.560955, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hodmx"]
gradient = SubResource("Gradient_qe4c1")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.495413, 0.490826)

[sub_resource type="Animation" id="Animation_6ejic"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_f1a2q"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 5.58505]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gcd7b"]
_data = {
"RESET": SubResource("Animation_6ejic"),
"die": SubResource("Animation_f1a2q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5gkc"]
size = Vector2(61, 51)

[sub_resource type="Theme" id="Theme_cytvr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_surkh"]
bg_color = Color(0.207843, 0.215686, 0.396078, 0.533333)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_avhmj"]
bg_color = Color(0.898039, 0.803922, 0.286275, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eudii"]
size = Vector2(52, 20)

[node name="Enemy" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(0, -16)
collision_layer = 8
collision_mask = 15
floor_block_on_wall = false
floor_max_angle = 0.18326
script = ExtResource("1_uod5a")

[node name="EnemyGraphic" type="Node2D" parent="."]
scale = Vector2(1, 0.75)

[node name="Sprite2D" type="Sprite2D" parent="EnemyGraphic"]
y_sort_enabled = true
position = Vector2(0, -46.6667)
scale = Vector2(1.6875, 0.3125)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Node2D" type="Node2D" parent="EnemyGraphic"]
z_index = -1
y_sort_enabled = true
position = Vector2(0, -38.6667)

[node name="Sprite2D2" type="Sprite2D" parent="EnemyGraphic/Node2D"]
y_sort_enabled = true
position = Vector2(-21.25, -2.99999)
scale = Vector2(0.359375, 0.375)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Sprite2D3" type="Sprite2D" parent="EnemyGraphic/Node2D"]
y_sort_enabled = true
position = Vector2(20.75, -2.99999)
scale = Vector2(0.359375, 0.375)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Node2D6" type="Node2D" parent="EnemyGraphic"]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -50.6667)
scale = Vector2(0.48, 1)

[node name="Sprite2D2" type="Sprite2D" parent="EnemyGraphic/Node2D6"]
y_sort_enabled = true
position = Vector2(-21.25, -2.99999)
scale = Vector2(0.359375, 0.375)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Sprite2D3" type="Sprite2D" parent="EnemyGraphic/Node2D6"]
y_sort_enabled = true
position = Vector2(20.75, -2.99999)
scale = Vector2(0.359375, 0.375)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Node2D2" type="Node2D" parent="EnemyGraphic"]
z_index = -2
y_sort_enabled = true
position = Vector2(0, -32)

[node name="Sprite2D2" type="Sprite2D" parent="EnemyGraphic/Node2D2"]
y_sort_enabled = true
position = Vector2(-21.25, -2.99999)
scale = Vector2(0.359375, 0.375)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Sprite2D3" type="Sprite2D" parent="EnemyGraphic/Node2D2"]
y_sort_enabled = true
position = Vector2(20.75, -2.99999)
scale = Vector2(0.359375, 0.375)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Node2D3" type="Node2D" parent="EnemyGraphic"]
z_index = -3
y_sort_enabled = true
position = Vector2(0, -24)

[node name="Sprite2D2" type="Sprite2D" parent="EnemyGraphic/Node2D3"]
y_sort_enabled = true
position = Vector2(-21.25, -2.99999)
scale = Vector2(0.359375, 0.375)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Sprite2D3" type="Sprite2D" parent="EnemyGraphic/Node2D3"]
y_sort_enabled = true
position = Vector2(20.75, -2.99999)
scale = Vector2(0.359375, 0.375)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Node2D4" type="Node2D" parent="EnemyGraphic"]
z_index = -4
y_sort_enabled = true
position = Vector2(0, -16)

[node name="Sprite2D2" type="Sprite2D" parent="EnemyGraphic/Node2D4"]
y_sort_enabled = true
position = Vector2(-21.25, -2.99999)
scale = Vector2(0.359375, 0.375)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Sprite2D3" type="Sprite2D" parent="EnemyGraphic/Node2D4"]
y_sort_enabled = true
position = Vector2(20.75, -2.99999)
scale = Vector2(0.359375, 0.375)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Node2D5" type="Node2D" parent="EnemyGraphic"]
z_index = -5
y_sort_enabled = true
position = Vector2(0, -8)

[node name="Sprite2D2" type="Sprite2D" parent="EnemyGraphic/Node2D5"]
y_sort_enabled = true
position = Vector2(-21.25, -2.99999)
scale = Vector2(0.359375, 0.375)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Sprite2D3" type="Sprite2D" parent="EnemyGraphic/Node2D5"]
y_sort_enabled = true
position = Vector2(20.75, -2.99999)
scale = Vector2(0.359375, 0.375)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Sprite2D2" type="Sprite2D" parent="EnemyGraphic"]
z_index = -6
y_sort_enabled = true
position = Vector2(-1, -4)
scale = Vector2(1.6875, 0.3125)
texture = SubResource("GradientTexture2D_hodmx")

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
radius = 50.4

[node name="Timer" type="Timer" parent="Navigation"]
wait_time = 0.05
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gcd7b")
}

[node name="Health" type="Node" parent="."]
script = ExtResource("2_b6kpp")

[node name="shootTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-0.5, -19.5)
shape = SubResource("RectangleShape2D_g5gkc")

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -71.0
offset_right = 40.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_cytvr")
theme_override_constants/outline_size = 1
theme_override_styles/background = SubResource("StyleBoxFlat_surkh")
theme_override_styles/fill = SubResource("StyleBoxFlat_avhmj")
value = 50.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 6)
shape = SubResource("RectangleShape2D_eudii")

[node name="CanFireVisualNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-4.29153e-06, -13.5)
scale = Vector2(3.8, 3.75)

[node name="CanMoveVisualNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1440, -810)
rect = Rect2(0, 0, 2880, 1620)

[connection signal="timeout" from="Navigation/Timer" to="." method="_on_timer_timeout"]
